add_executable(matrix_read matrix_read.cpp)   
target_link_libraries(matrix_read PUBLIC Eigen3::Eigen)
target_link_libraries(matrix_read PUBLIC FFTWpp)
find_package(OpenMP)
if(OpenMP_CXX_FOUND)
    target_link_libraries(matrix_read PUBLIC OpenMP::OpenMP_CXX)
endif()

add_executable(test test.cpp)   
target_link_libraries(test PUBLIC Eigen3::Eigen)
target_link_libraries(test PUBLIC FFTWpp)
find_package(OpenMP)
if(OpenMP_CXX_FOUND)
    target_link_libraries(test PUBLIC OpenMP::OpenMP_CXX)
endif()